Ensure correctly overlap with/without publications

--- a/src/assets/custom/css/_sass/_compass-teaser.scss
+++ b/src/assets/custom/css/_sass/_compass-teaser.scss
@@ -11,10 +11,15 @@
   @include small {
     padding: 50px 25px;
   }
-  @include medium-large-and-extra-large {
+  @include medium {
     padding: 50px;
     position: relative;
     top: -100px;
+  }
+  @include large-and-extra-large {
+    padding: 50px;
+    position: relative;
+    top: #{-2 * $vertical-overlap};
   }
 }
 
