--- a/src/assets/custom/css/main.scss
+++ b/src/assets/custom/css/main.scss
@@ -2,6 +2,7 @@
 ---
 
 $site-base-url: "{{ site.baseurl }}";
+$vertical-overlap: 100px;
 
 @import "lateral-spacing";
 @import "breakpoints";
